GK-19 Add new mapping